--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="/api/placeholder/550/400" alt="AI Technology Illustration">
+                    <img src="assets/21f3c765-e63c-4d92-badf-64196acd0c64.png" alt="AI Technology Illustration">
                 </div>
             </div>
         </div>
@@ -533,7 +533,7 @@
             <div class="footer-content">
                 <div class="footer-info">
                     <h3>Speats</h3>
-                    <p>Pioneering AI solutions to help businesses automate processes, enhance decision-making, and create exceptional customer experiences.</p>
+                    <p>Leveraging cutting-edge AI technology, we empower businesses to streamline operations, drive innovation, and deliver exceptional customer experiences.</p>
                     <div class="social-links">
                         <a href="#">📱</a>
                         <a href="#">💻</a>
