--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Speats | AI Solutions & Automation</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
     <header>
@@ -15,7 +16,7 @@
                 </div>
                 <div class="language-globe">
                     <div class="globe-icon" onclick="toggleLanguageMenu()">
-                        <span class="flag-icon">🇬🇧</span><span class="arrow-down">▼</span>
+                        <i class="fas fa-globe"></i><i class="fas fa-chevron-down" style="font-size: 0.8em; margin-left: 5px;"></i>
                     </div>
                     <div class="language-dropdown" id="languageMenu">
                         <div class="lang-option" onclick="changeLanguage('en')">English</div>
@@ -56,10 +57,6 @@
                     <div class="btn-group">
                         <a href="#services" class="btn" data-i18n="explore_solutions">Explore Solutions</a>
                     </div>
-                    <p data-i18n="contact_us_directly">Or contact us directly: <a href="tel:+41794508927">+41 79 450 89 27</a><br>
-                    Or email us: <a href="mailto:info@speats.ch">info@speats.ch</a></p>
-                    <p data-i18n="translate_language">Translate language Or contact us directly: <a href="tel:+41794508927">+41 79 450 89 27</a><br>
-                    Or email us: <a href="mailto:info@speats.ch">info@speats.ch</a></p>
 
                 </div>
                 <div class="hero-image">
@@ -96,7 +93,7 @@
             </div>
             <div class="services">
                 <div class="service-card">
-                    <div class="service-icon">🧠</div>
+                <div class="service-icon"><i class="fas fa-brain"></i></div>
                     <h3 data-i18n="service_intelligent_agents_title">Intelligent Agents</h3>
                     <p data-i18n="service_intelligent_agents_description">Our autonomous AI agents can perceive your business environment, make decisions, and take actions to achieve specific goals without human intervention. They seamlessly handle complex workflows, customer interactions, and data analysis.</p>
                     <p style="margin-top: 15px; color: var(--primary-dark); font-weight: 500;" data-i18n="service_key_benefits">Key Benefits:</p>
@@ -108,7 +105,7 @@
                     </ul>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">⚙️</div>
+                <div class="service-icon"><i class="fas fa-cogs"></i></div>
                     <h3 data-i18n="service_process_automation_title">Process Automation</h3>
                     <p data-i18n="service_process_automation_description">Streamline workflows and eliminate repetitive tasks with our advanced automation solutions, allowing your team to focus on high-value work while reducing operational costs and improving accuracy.</p>
                     <p style="margin-top: 15px; color: var(--primary-dark); font-weight: 500;" data-i18n="service_automation_areas">Automation Areas:</p>
@@ -120,7 +117,7 @@
                     </ul>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">📊</div>
+                <div class="service-icon"><i class="fas fa-chart-bar"></i></div>
                     <h3 data-i18n="service_custom_ai_applications_title">Custom AI Applications</h3>
                     <p data-i18n="service_custom_ai_applications_description">We design and develop tailored AI applications that address your specific business challenges and optimize operational efficiency with solutions built specifically for your unique needs.</p>
                     <p style="margin-top: 15px; color: var(--primary-dark); font-weight: 500;" data-i18n="service_features">Features:</p>
@@ -184,10 +181,10 @@
                     <h3>Speats</h3>
                     <p data-i18n="footer_description">Leveraging cutting-edge AI technology, we empower businesses to streamline operations, drive innovation, and deliver exceptional customer experiences.</p>
                     <div class="social-links">
-                        <a href="#">📱</a>
-                        <a href="#">💻</a>
-                        <a href="#">📧</a>
-                        <a href="#">🔗</a>
+                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fas fa-envelope"></i></a>
+                        <a href="#"><i class="fas fa-globe"></i></a>
                     </div>
                 </div>
                 <div class="footer-links">
@@ -211,13 +208,13 @@
                 <div class="footer-links">
                     <h4 data-i18n="footer_contact_us">Contact Us</h4>
                     <div class="contact-info">
-                        <i>📍</i> Brandstrasse 21, Schlieren, Switzerland
+                        <i class="fas fa-map-marker-alt"></i> Brandstrasse 21, Schlieren, Switzerland
                     </div>
                     <div class="contact-info">
-                        <i>📞</i> +41 79 450 89 27
+                        <i class="fas fa-phone"></i> +41 79 450 89 27
                     </div>
                     <div class="contact-info">
-                        <i>📧</i> info@speats.ch
+                        <i class="fas fa-envelope"></i> info@speats.ch
                     </div>
                 </div>
             </div>
