--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 <div class="footer-links">
                     <h4 data-i18n="footer_contact_us">Contact Us</h4>
                     <div class="contact-info" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-                        <i class="fas fa-map-marker-alt"></i> <span itemprop="streetAddress">Brandstrasse 21</span>, <span itemprop="addressLocality">Schlieren</span>, <span itemprop="addressCountry">Switzerland</span>
+                        <i class="fas fa-map-marker-alt"></i> <span itemprop="streetAddress">Brandstrasse 21, Schlieren, Switzerland</span>, 
                     </div>
                     <div class="contact-info">
                         <i class="fas fa-phone"></i> <a href="tel:+41794508927" itemprop="telephone">+41 79 450 89 27</a>
