--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <section class="section" id="services">
         <div class="container">
             <div class="section-title">
-                <h2 data-i18n="services_title">Our AI Solutions</h2>
+                <h2 data-i18n="services_title">Our AI Solutions.</h2>
                 <p data-i18n="services_description">We create powerful technology that solves real business problems, enhances productivity, and delivers measurable results.</p>
             </div>
             <div itemprop="hasOfferCatalog" itemscope itemtype="http://schema.org/OfferCatalog">
@@ -330,6 +330,6 @@
     </script>
     
     <!-- Compressed and minified JavaScript -->
-    <script src="script.min.js" defer></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
